--- a/scss/main.css
+++ b/scss/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(node_modules/bootstrap-icons/font/bootstrap-icons.css);
+@import url("/node_modules/bootstrap-icons/font/bootstrap-icons.css");
 /*!
  * Bootstrap  v5.3.8 (https://getbootstrap.com/)
  * Copyright 2011-2025 The Bootstrap Authors
@@ -11979,4 +11979,25 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+#main-page {
+  flex: 1;
+}
+
+main {
+  flex: 1;
+}
+
+.footer {
+  padding: 15px;
+  background-color: #333;
+  color: white;
 }/*# sourceMappingURL=main.css.map */
