--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,26 @@
-@import url(node_modules/bootstrap-icons/font/bootstrap-icons.css);
-@import 'custom'
+@use 'custom';
+@import url("/node_modules/bootstrap-icons/font/bootstrap-icons.css");
+
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+#main-page {
+  flex: 1;
+}
+
+
+main {
+    flex: 1; // prend l’espace restant
+}
+
+.footer {
+    padding: 15px;
+    background-color: #333;
+    color: white;
+}
