--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
-@use 'custom';
+@use "custom";
 @import url("/node_modules/bootstrap-icons/font/bootstrap-icons.css");
-
 
 body {
   min-height: 100vh;
@@ -14,13 +13,67 @@ body {
   flex: 1;
 }
 
-
 main {
-    flex: 1; // prend l’espace restant
+  flex: 1; // prend l’espace restant
 }
 
 .footer {
-    padding: 15px;
-    background-color: #333;
-    color: white;
+  padding: 15px;
+
+  background-color: #333;
+  color: white;
+}
+
+.hero-scene {
+  position: relative;
+  margin-bottom: 15px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/Hero.jpg);
+    background-size: cover;
+    filter: brightness(0.3);
+  }
+
+  * {
+    //Positionner les éléments devant le ::before
+    position: relative;
+  }
+
+  .hero-scene-content {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.image-card {
+  position: relative;
+  &:hover {
+    .titre-image {
+      opacity: 1;
+    }
+    img {
+      filter: brightness(0.3);
+    }
+  }
+
+  img {
+    transition: all 0.3s;
+  }
+
+  .titre-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all 0.3s;
+  }
 }
