--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+// Imports
 @import "custom";
 @import url("/node_modules/bootstrap-icons/font/bootstrap-icons.css");
 
@@ -78,6 +79,7 @@ main {
 
 .image-card {
   position: relative;
+
   &:hover {
     .titre-image {
       opacity: 1;
@@ -85,11 +87,14 @@ main {
     img {
       filter: brightness(0.3);
     }
+    .action-image-buttons {
+      opacity: 1 !important;
+      pointer-events: auto !important;
+    }
   }
 
   img {
     transition: all 0.3s;
-    
   }
 
   .titre-image {
@@ -99,21 +104,26 @@ main {
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: all 0.3s;
-   }
+  }
 
-  .action-image-buttons{
-    position : absolute;
+  .action-image-buttons {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     padding: 5px;
     display: flex;
-    justify-content: space-between:
+    justify-content: space-between;
     opacity: 0;
     transition: all 0.3s;
+    pointer-events: none;
+  }
+
+  &:hover .action-image-buttons {
+    opacity: 1;
+    pointer-events: auto;
   }
 }
-
 .form-label {
   color: $primary;
 }
